# sqledger

./: 01_create.sql  03_select.sql  Cargo.toml  scripts.db
src/: app.rs  config.rs  db.rs  editor.rs  event.rs  main.rs  ui.rs
