[package]
name = "sqledger"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
postgres = { version = "0.19.12", features = ["with-chrono-0_4"] }

serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
dirs = "6.0.0"
shellexpand = "3.1.1"
chrono = "0.4.42"
